syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.logistics.common.shipping";
option java_outer_classname = "ShippingProto";

package shipping;

service ShippingService {
  rpc CreateShipment (ShipmentRequest) returns (ShipmentResponse);
}

message ShipmentRequest {
  string orderId = 1;
  string address = 2;
}

message ShipmentResponse {
  string shipmentId = 1;
  string status = 2;
}
